# invest

./: .gitignore  README.md  bad_ticker_info  setup.cfg
docs/: invest - a py2store interface to yahoo finance APIs.ipynb
docsrc/: table_of_contents.rst
docsrc/module_docs/: invest.rst
docsrc/module_docs/invest/: _prep.rst  base.rst  dacc.rst  util.rst  yfinance.rst
docsrc/module_docs/invest/scripts/: download_yf_data.rst
docsrc/module_docs/invest/yfinance/: base.rst  multi.rst  shared.rst  ticker.rst  tickers.rst  utils.rst
invest/: __init__.py  _prep.py  base.py  dacc.py  util.py
invest/data/: default_ticker_symbols.csv
invest/misc/: quarterly_features.py  yf_prep.py
invest/scripts/: bad_ticker_info  download_yf_data.py
invest/yfinance/: __init__.py  base.py  utils.py
