[metadata]
name = invest
description = Python access to structure stock market information
license = mit
description_file = README.md
keywords = 
		finance
		stock market
		trading
		markets
		python
		quant
		data
root_url = https://github.com/thorwhalen/
author = Thor Whalen

[options]
packages = find:
include_package_data = True
zip_safe = False
install_requires =
	yfinance
	py2store

