[metadata]
name = invest
version = 0.0.9
url = https://github.com/thorwhalen/invest
platforms = any
description_file = README.md
description = Python access to structure stock market information
license = mit
keywords = 
		finance
		stock market
		trading
		markets
		python
		quant
		data
root_url = https://github.com/thorwhalen/
author = Thor Whalen

[options]
packages = find:
include_package_data = True
zip_safe = False
install_requires = 
	py2store

